--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,60 @@
 
-# Created by https://www.gitignore.io/api/cmake,linux,windows,visualstudiocode
-# Edit at https://www.gitignore.io/?templates=cmake,linux,windows,visualstudiocode
+# Created by https://www.toptal.com/developers/gitignore/api/c,linux,windows
+# Edit at https://www.toptal.com/developers/gitignore?templates=c,linux,windows
 
-### CMake ###
-CMakeLists.txt.user
-CMakeCache.txt
-CMakeFiles
-CMakeScripts
-Testing
-Makefile
-cmake_install.cmake
-install_manifest.txt
-compile_commands.json
-CTestTestfile.cmake
+### C ###
+# Prerequisites
+*.d
 
-# in-dev
-build/
-calc
+# Object files
+*.o
+*.ko
+*.obj
+*.elf
+
+# Linker output
+*.ilk
+*.map
+*.exp
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Libraries
+*.lib
+*.a
+*.la
+*.lo
+
+# Shared objects (inc. Windows DLLs)
+*.dll
+*.so
+*.so.*
+*.dylib
+
+# Executables
+*.exe
+*.out
+*.app
+*.i*86
+*.x86_64
+*.hex
+
+# Debug files
+*.dSYM/
+*.su
+*.idb
+*.pdb
+
+# Kernel Module Compile Results
+*.mod*
+*.cmd
+.tmp_versions/
+modules.order
+Module.symvers
+Mkfile.old
+dkms.conf
 
 ### Linux ###
 *~
@@ -33,16 +71,10 @@ calc
 # .nfs files are created when an open file is removed but is still being accessed
 .nfs*
 
-### VisualStudioCode ###
-.vscode/*
-
-### VisualStudioCode Patch ###
-# Ignore all local history of files
-.history
-
 ### Windows ###
 # Windows thumbnail cache files
 Thumbs.db
+Thumbs.db:encryptable
 ehthumbs.db
 ehthumbs_vista.db
 
@@ -65,4 +97,4 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.gitignore.io/api/cmake,linux,windows,visualstudiocode
+# End of https://www.toptal.com/developers/gitignore/api/c,linux,windows
